[gd_scene load_steps=6 format=3 uid="uid://cqq8meapgi251"]

[ext_resource type="Script" path="res://PuzzleCanvas/PuzzleCanvas.gd" id="1_y76fk"]
[ext_resource type="Script" path="res://UI/SelectionBox.gd" id="2_yor7s"]
[ext_resource type="Script" path="res://Edge/EdgeGenerator.gd" id="3_ye8um"]
[ext_resource type="Script" path="res://Edge/EdgeTemplate.gd" id="4_4oj1y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awmdd"]
size = Vector2(1, 1)

[node name="PuzzleCanvas" type="Node2D" node_paths=PackedStringArray("camera")]
script = ExtResource("1_y76fk")
camera = NodePath("")

[node name="SelectionBox" type="Area2D" parent="."]
z_index = 2
script = ExtResource("2_yor7s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionBox"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_awmdd")

[node name="Polygon2D" type="Polygon2D" parent="SelectionBox"]
color = Color(0.823529, 0.25098, 1, 0.439216)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="EdgeGenerator" type="Node2D" parent="."]
script = ExtResource("3_ye8um")

[node name="TwoKnobSymetry" type="Line2D" parent="EdgeGenerator"]
position = Vector2(161, -60)
points = PackedVector2Array(-22, 150, 145, 179, 129, 95, 188, 68, 265, 104, 231.236, 158.022, 205, 200, 272, 234, 335, 214, 333, 132, 511, 161)
script = ExtResource("4_4oj1y")
template_name = "Snake"

[node name="BreakingWave" type="Line2D" parent="EdgeGenerator"]
position = Vector2(-160, -465)
points = PackedVector2Array(69, 422, 257, 405, 318, 318, 439, 315, 430, 378, 337, 422, 363, 456, 421, 446, 606, 393)
script = ExtResource("4_4oj1y")
frequency = 3.0
template_name = "Wave"

[node name="VanillaKnob" type="Line2D" parent="EdgeGenerator"]
position = Vector2(638, -8)
points = PackedVector2Array(-44, 0, 95, 0, 70, -50, 120, -80, 170, -50, 145, 0, 284, 2)
width = 3.0
joint_mode = 1
script = ExtResource("4_4oj1y")
frequency = 10.0
template_name = "Default"

[node name="HeartShape" type="Line2D" parent="EdgeGenerator"]
points = PackedVector2Array(136, 472, 403, 485, 319, 342, 376, 297, 459, 359, 548, 306, 609, 361, 521, 490, 860, 487)
script = ExtResource("4_4oj1y")
frequency = 0.2
template_name = "Heart"

[node name="Straight" type="Line2D" parent="EdgeGenerator"]
points = PackedVector2Array(700, 200, 900, 200)
script = ExtResource("4_4oj1y")
frequency = 0.0
template_name = "Strait"

[node name="BBox" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="BBox"]
width = 6.0
default_color = Color(0.368627, 0.568627, 0.760784, 1)
begin_cap_mode = 1
end_cap_mode = 1
